rownez-core-service/k8s-deployment/rownez-resort-k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rownez-resort-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: edysphere.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rownez-resort-service
                port:
                  number: 80
